# DKT_VPN

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
_codeql_build_dir/DKT_VPN_autogen/: deps  mocs_compilation.cpp
_codeql_build_dir/DKT_VPN_autogen/UVLADIE3JM/: moc_mainwindow.cpp.d  moc_vpnmanager.cpp.d
configs/: dkt-br.conf.template
src/: main.cpp  mainwindow.cpp  mainwindow.h  vpnmanager.cpp  vpnmanager.h  vpnserver.h
